Fix overflow issue

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -20,7 +20,7 @@
 
 body {
     background-color: var(--main-background);
-    overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 h1,
